[package]
name = "worky"
version = "0.0.1"
authors = ["don <donovandall@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
notify = "4.0"
structopt = "0.3.21"
rand = "0.7.3"
fs_extra = "1.2.0"
rayon = "1.5.0"
tokio = { version = "0.3", features = ["macros", "rt-multi-thread"] }
shellfn = "0.1.1"